# SKA-SDP-Accelerate-gridding

./: .gitignore  CHANGELOG.md  CPUstack.yaml  GPUstack.yaml  GridTesting.hs  Gridding.hs  LICENSE  README.md  jobScript.sh  jobScriptTEST.sh  package.yaml  ska-sdp-accelerate.cabal  stack.yaml
GPU/: GPUMain.hs  Main.hs  package.yaml  stack.yaml
app/: Main.hs
data/: SKA1_Low_akern.h5  SKA1_Low_akern2.h5  SKA1_Low_akern3.h5  SKA1_Low_wkern.h5  SKA1_Low_wkern2.h5
hdf5/: hdf5.cc  test.h5
old/: BrokenNumbers.hs  ShiftExample.hs  hdf5.pc
src/: FFT.hs  Gridding.hs  Hdf5.hs  ImageDataset.hs  Types.hs  Utility.hs
test/: FFTSeqProb.hs  GridTesting.hs  Hdf5.hs  PermuteSeqError.hs  SmallTest.hs  Test.hs
testing/: SeqTesting.hs
